Complete portfolio website with animated background, professional experience, and project showcases
- Added dynamic animated bullet points for About Me section
- Updated internship experience with accurate RDCT and Durham Public Schools details
- Added all project screenshots and descriptions
- Implemented modern responsive design with purple theme
- Added professional contact information and skills sections

--- a/index.html
+++ b/index.html
@@ -64,15 +64,19 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>
-                        I'm a senior Business IT student at North Carolina A&T State University with a strong passion for data and technology. My journey into tech began with a growing curiosity for collecting, manipulating, and visualizing data in meaningful ways. Over time, I've developed hands-on experience in Python and Visual Studio, which has allowed me to build data-driven solutions and explore backend development.
-                    </p>
-                    <p>
-                        My interest in application development deepened during an internship with RDCT, where I had the opportunity to work closely under the Vice President of Software Engineering. This experience exposed me to terminal workflows, backend processes. Afterwards, I applied these skills to me learning how to work with Copilot.
-                    </p>
-                    <p>
-                        Now, I'm focused on expanding my skills in software development, data visualization, and full-stack application building. I'm excited to keep learning, creating, and collaborating with others in the tech space.
-                    </p>
+                    <div class="about-background">
+                        <h3>Background</h3>
+                        <ul class="background-points">
+                            <li>Senior Business IT student at North Carolina A&T State University</li>
+                            <li>Strong passion for data collection, manipulation, and visualization</li>
+                            <li>Hands-on experience with Python and Visual Studio for data-driven solutions</li>
+                            <li>Software Development Intern at RDCT under VP of Software Engineering</li>
+                            <li>Gained exposure to terminal workflows and backend development processes</li>
+                            <li>Applied technical skills to master GitHub Copilot for enhanced development</li>
+                            <li>Currently expanding expertise in software development and data visualization</li>
+                            <li>Focused on full-stack application building and collaborative tech projects</li>
+                        </ul>
+                    </div>
                     <div class="about-stats">
                         <div class="stat">
                             <h3>5+</h3>
@@ -108,12 +112,30 @@
                     </div>
                     <div class="experience-description">
                         <ul>
-                            <li>Developed and maintained web applications using modern JavaScript frameworks and technologies</li>
-                            <li>Collaborated with senior developers on software solutions for data center management and infrastructure</li>
-                            <li>Participated in code reviews and implemented best practices for clean, maintainable code</li>
-                            <li>Worked with databases, REST APIs, and cloud services to create efficient data management systems</li>
-                            <li>Gained hands-on experience with version control (Git), agile development methodologies, and CI/CD pipelines</li>
-                            <li>Contributed to debugging, testing, and optimization of existing software applications</li>
+                            <li>Developed and maintained automated test scripts using Python</li>
+                            <li>Participated in daily Scrum stand-up meetings to provide updates, discuss blockers, and align with team goals</li>
+                            <li>Engaged in code reviews and feedback loops to ensure code quality and adherence to best practices</li>
+                            <li>Presented a terminal-based Python app built with Typer at the end of the internship</li>
+                        </ul>
+                    </div>
+                </div>
+                
+                <div class="experience-item">
+                    <div class="experience-header">
+                        <h3>IT Intern</h3>
+                        <div class="company-location">
+                            <h4>Durham Public Schools Information Technology Department</h4>
+                            <span class="location">Durham, NC</span>
+                        </div>
+                        <span class="duration">June 2021 - August 2021</span>
+                    </div>
+                    <div class="experience-description">
+                        <ul>
+                            <li>Collaborated with IT and administrative teams to gather and document technology and data needs, helping improve district operations</li>
+                            <li>Created detailed reports and engaging presentations to support staff and project goals</li>
+                            <li>Analyzed educational data to generate insights that informed strategic decision-making</li>
+                            <li>Honored with the opportunity to deliver a speech at the Governor's Mansion, representing the internship program and sharing my experience with state and education leaders</li>
+                            <li>Developed strong communication and leadership skills through public speaking and teamwork</li>
                         </ul>
                     </div>
                 </div>
@@ -125,7 +147,7 @@
                             <h4>North Carolina A&T State University</h4>
                             <span class="location">Greensboro, NC</span>
                         </div>
-                        <span class="duration">2022 - Present</span>
+                        <span class="duration">2022 - December 2025</span>
                     </div>
                     <div class="experience-description">
                         <ul>
@@ -145,26 +167,6 @@
         <div class="container">
             <h2 class="section-title">Skills & Technologies</h2>
             <div class="skills-grid">
-                <div class="skill-category">
-                    <h3>Frontend</h3>
-                    <div class="skill-items">
-                        <span class="skill-item">HTML5</span>
-                        <span class="skill-item">CSS3</span>
-                        <span class="skill-item">JavaScript</span>
-                        <span class="skill-item">React</span>
-                        <span class="skill-item">Tailwind CSS</span>
-                    </div>
-                </div>
-                <div class="skill-category">
-                    <h3>Backend</h3>
-                    <div class="skill-items">
-                        <span class="skill-item">Python</span>
-                        <span class="skill-item">Flask</span>
-                        <span class="skill-item">Node.js</span>
-                        <span class="skill-item">APIs</span>
-                        <span class="skill-item">Databases</span>
-                    </div>
-                </div>
                 <div class="skill-category">
                     <h3>Data & Analytics</h3>
                     <div class="skill-items">
@@ -220,16 +222,17 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <i class="fas fa-chart-bar"></i>
+                        <img src="assets/images/projects/data-viz.png" alt="Data Visualization App Screenshot" class="project-screenshot">
                     </div>
                     <div class="project-content">
-                        <h3>Data Analysis Dashboard</h3>
-                        <p>Interactive data visualization dashboard created with Python and Jupyter Notebooks. Analyzes business metrics and presents insights through compelling charts and graphs.</p>
+                        <h3>Data Visualization App</h3>
+                        <p>A comprehensive data visualization application developed using Python and GitHub Copilot. This app transforms raw data into interactive charts and graphs, enabling users to analyze trends and patterns with ease. Features dynamic plotting capabilities and user-friendly data import functionality.</p>
                         <div class="project-tech">
                             <span>Python</span>
-                            <span>Pandas</span>
-                            <span>Jupyter</span>
+                            <span>GitHub Copilot</span>
                             <span>Matplotlib</span>
+                            <span>Pandas</span>
+                            <span>Streamlit</span>
                         </div>
                         <div class="project-links">
                             <a href="https://data-visualization-tool-delta.vercel.app" class="project-link" target="_blank">
@@ -244,7 +247,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <i class="fas fa-code"></i>
+                        <img src="assets/images/projects/portfolio.png" alt="Portfolio Website Screenshot" class="project-screenshot">
                     </div>
                     <div class="project-content">
                         <h3>Portfolio Website</h3>
@@ -261,6 +264,30 @@
                             </a>
                             <a href="#" class="project-link">
                                 <i class="fab fa-github"></i> Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="assets/images/tableau.png" alt="Tableau Case Analysis Dashboard Screenshot" class="project-screenshot">
+                    </div>
+                    <div class="project-content">
+                        <h3>Case Analysis Project</h3>
+                        <p>Analyzed nationwide sales data from 2012 to 2020 across five paper product categories: cardboard, coated paper, newsprint, paperboard, and tissue paper. Identified sales trends, market shifts, and factors impacting demand to provide insights into industry performance over time. This comprehensive business case analysis utilizes Tableau for advanced data visualization and demonstrates complex data storytelling through interactive dashboards.</p>
+                        <div class="project-tech">
+                            <span>Tableau</span>
+                            <span>Data Analysis</span>
+                            <span>Business Intelligence</span>
+                            <span>Data Storytelling</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" class="project-link">
+                                <i class="fas fa-external-link-alt"></i> View Dashboard
+                            </a>
+                            <a href="#" class="project-link">
+                                <i class="fas fa-file-pdf"></i> Case Study
                             </a>
                         </div>
                     </div>
