Add GitHub repository and GitHub Pages links to portfolio project
- Updated Portfolio Website project with live GitHub Pages URL
- Added direct link to repository source code

--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
                             <span>Responsive Design</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://lelahmckoy.github.io/portfolio" class="project-link" target="_blank">
                                 <i class="fas fa-external-link-alt"></i> Live Site
                             </a>
-                            <a href="#" class="project-link">
+                            <a href="https://github.com/LelahM/portfolio" class="project-link" target="_blank">
                                 <i class="fab fa-github"></i> Code
                             </a>
                         </div>
