--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                                 <i class="fas fa-lightbulb"></i>
                             </div>
                             <h4>Business Intelligence</h4>
-                            <p>Experience in analyzing educational data and creating strategic reports that inform decision-making</p>
+                            <p>Experience in analyzing financial data and creating strategic reports that inform decision-making</p>
                         </div>
                         
                         <div class="expertise-card">
